# csp-stars

./: CMakeLists.txt  README.md
gui/: stars_settings.html
gui/js/: csp-stars.js  stars_settings.js
src/: Plugin.cpp  Plugin.hpp  Shaders.cpp  Stars.cpp  Stars.hpp  logger.cpp  logger.hpp
